# case-study

./: .gitignore  README.md  pyproject.toml
case_study.egg-info/: PKG-INFO  requires.txt  top_level.txt
prev_analytics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
prev_analytics/data/raw/alertas_antifraude/: alertas_antifraude.parquet
prev_analytics/data/raw/ciclo_vida/: ciclo_vida.parquet
prev_analytics/data/raw/estabelecimentos/: estabelecimentos.parquet
prev_analytics/data/raw/faturamento/: faturamento.parquet
prev_analytics/data/raw/fraudes/: fraudes.parquet
prev_analytics/data/raw/interacoes_relacionamento/: interacoes_relacionamento.parquet
prev_analytics/data/raw/solicitacoes_central/: solicitacoes_central.parquet
scripts/: generate_merchant360_raw.py
